(build) Bare metal distribution script
Run with `./gradlew installDist`, deposits build artifacts at
`build/dist`.